--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
 DB_FILE_NAME=tmp/local.db
+
+GOOGLE_AUTH_SCOPE=...
+GOOGLE_CLIENT_SECRET=...
+
+PUBLIC_GOOGLE_CLIENT_ID=...
+PUBLIC_GOOGLE_REDIRECT_URL=http://localhost:5173/login/redirect
