--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@libsql/client": "^0.14.0",
 		"cuid": "^3.0.0",
 		"drizzle-orm": "^0.36.0",
+		"google-auth-library": "^9.14.2",
 		"moment": "^2.30.1",
 		"pino": "^9.5.0"
 	}
