--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
-DB_FILE_NAME=tmp/local.db
+DATABASE_URL=file:tmp/local.db
 
-GOOGLE_AUTH_SCOPE=...
+LOG_LEVEL=debug
+ORIGIN=http://localhost:5173
+COOKIE_DOMAIN=http://localhost:5173
+
 GOOGLE_CLIENT_SECRET=...
-
 PUBLIC_GOOGLE_CLIENT_ID=...
 PUBLIC_GOOGLE_REDIRECT_URL=http://localhost:5173/login/redirect
