--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/bun": "^1.1.13",
+		"autoprefixer": "^10.4.20",
+		"daisyui": "^4.12.14",
 		"drizzle-kit": "^0.27.2",
+		"postcss": "^8.4.47",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"svelte": "^5.0.0",
 		"svelte-adapter-bun": "^0.5.2",
 		"svelte-check": "^4.0.0",
+		"tailwindcss": "^3.4.14",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
