--- a/Dockerfile.migrate
+++ b/Dockerfile.migrate
@@ -2,13 +2,13 @@ FROM oven/bun:latest
 
 WORKDIR /app
 
-COPY package.json ./
-COPY bun.lockb ./
+COPY package.json .
+COPY bun.lockb .
 
-COPY drizzle ./
-COPY drizzle.config.ts ./
-COPY src/lib/server/db ./
+COPY drizzle.config.ts .
+COPY drizzle ./drizzle
+COPY src/lib/server/db ./src/lib/server/db
 
-RUN bun install drizzle-kit
+RUN bun install drizzle-kit drizzle-orm
 
 ENTRYPOINT [ "bun", "run", "db:migrate" ]
