minor login flow changes

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 DATABASE_URL=file:tmp/local.db
 
 LOG_LEVEL=debug
-ORIGIN=http://localhost:5173
 COOKIE_DOMAIN=http://localhost:5173
+PUBLIC_ORIGIN=http://localhost:5173
 
 GOOGLE_CLIENT_SECRET=...
 PUBLIC_GOOGLE_CLIENT_ID=...
