--- a/static/manifest.json
+++ b/static/manifest.json
@@ -8,8 +8,8 @@
       "type": "image/png"
     }
   ],
-  "start_url": ".",
+  "start_url": "/app",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#000000"
 }
