--- a/static/manifest.json
+++ b/static/manifest.json
@@ -10,6 +10,6 @@
   ],
   "start_url": "/app",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#000000"
+  "theme_color": "#ffffff",
+  "background_color": "#ffffff"
 }
